Corrected wordwrap for long titles

--- a/templates/protostar/less/template.less
+++ b/templates/protostar/less/template.less
@@ -657,3 +657,6 @@ body.modal-open {
 .container-popup {
 	padding: 28px 10px 10px 10px;
 }
+li {
+	word-wrap: break-word;
+}
